--- a/webapp/src/custom-theme.scss
+++ b/webapp/src/custom-theme.scss
@@ -9,7 +9,7 @@
 html {
   @include mat.theme((
     color: (
-      primary: mat.$rose-palette,
+      primary: mat.$orange-palette,
       tertiary: mat.$red-palette,
     ),
     typography: Roboto,
